components/PhotoBox.module.scss
@import "../styles/variables";

.photo {
    &__box {
        display: grid;
        grid-template-areas: "overlay";
        border-radius: $border-radius;
        overflow: hidden;
        position: relative;
        align-content: center;

        & > * {
            display: flex;
            grid-area: overlay;
        }
    }

    &__overlay {
        background-color: lighten($color-green-tint, 20%);
        transition: $transition-long;

        &:hover {
            background-color: transparent;
        }
    }
}

